criação de tentativa de contato e refatoração de código